manifests/kiam-2.2.3.tgz-manifest.yaml
---
# Source: kiam/templates/agent/agent-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-kiam-agent
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kiam
    app.kubernetes.io/version: 4.2.0
    helm.sh/chart: kiam-2.2.3
    app.kubernetes.io/component: agent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: kiam
      app.kubernetes.io/component: agent
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
---
# Source: kiam/templates/server/server-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-kiam-server
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kiam
    app.kubernetes.io/version: 4.2.0
    helm.sh/chart: kiam-2.2.3
    app.kubernetes.io/component: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: kiam
      app.kubernetes.io/component: server
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8443
---
# Source: kiam/templates/server/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kiam
    app.kubernetes.io/version: 4.2.0
    helm.sh/chart: kiam-2.2.3
    app.kubernetes.io/component: server
  name: my-release-kiam-server
  namespace: "default"
spec:
  type: ClusterIP
  clusterIP: None
  sessionAffinity: None
  ports:
    - name: grpclb
      port: 8443
      targetPort: 8443
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: kiam
    app.kubernetes.io/component: server
---
# Source: kiam/templates/agent/agent-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kiam
    app.kubernetes.io/version: 4.2.0
    helm.sh/chart: kiam-2.2.3
    app.kubernetes.io/component: agent
  name: my-release-kiam-agent
  namespace: "default"
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: kiam
      app.kubernetes.io/component: agent
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kiam
        app.kubernetes.io/version: 4.2.0
        helm.sh/chart: kiam-2.2.3
        app.kubernetes.io/component: agent
    spec:
      
      automountServiceAccountToken: false
      serviceAccountName: my-release-kiam-agent
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: kiam
                    app.kubernetes.io/component: agent
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: agent
          image: docker.io/bitnami/kiam:4.2.0-debian-12-r30
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
              - NET_ADMIN
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 0
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          command:
            - kiam
            - agent
          args:
            - --no-iptables-remove
            - --host-interface=cali+
            - --json-log
            - --level=info
            - --port=8183
            - --cert=/bitnami/kiam/tls/cert.pem
            - --key=/bitnami/kiam/tls/key.pem
            - --ca=/bitnami/kiam/tls/ca.pem
            - --server-address=my-release-kiam-server:8443
            - --gateway-timeout-creation=1s
          ports:
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8183
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: 8183
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - mountPath: /bitnami/kiam/tls
              name: tls
            - mountPath: /etc/ssl/certs
              name: ssl-certs
              readOnly: true
            - mountPath: /var/run/xtables.lock
              name: xtables
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: tls
          secret:
            secretName: my-release-kiam-agent
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: xtables
          hostPath:
            path: /run/xtables.lock
            type: FileOrCreate
---
# Source: kiam/templates/server/server-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kiam
    app.kubernetes.io/version: 4.2.0
    helm.sh/chart: kiam-2.2.3
    app.kubernetes.io/component: server
  name: my-release-kiam-server
  namespace: "default"
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: kiam
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kiam
        app.kubernetes.io/version: 4.2.0
        helm.sh/chart: kiam-2.2.3
        app.kubernetes.io/component: server
    spec:
      
      automountServiceAccountToken: true
      serviceAccountName: my-release-kiam-server
      dnsPolicy: Default
      hostNetwork: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: kiam
                    app.kubernetes.io/component: server
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: server
          image: docker.io/bitnami/kiam:4.2.0-debian-12-r30
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: false
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          command:
            - kiam
            - server
          args:
            - --json-log
            - --level=info
            - --bind=0.0.0.0:8443
            - --cert=/bitnami/kiam/tls/cert.pem
            - --key=/bitnami/kiam/tls/key.pem
            - --ca=/bitnami/kiam/tls/ca.pem
            - --role-base-arn-autodetect
            - --session-duration=15m
            - --sync=1m
          ports:
            - name: grpclb
              containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          livenessProbe:
            exec:
              command:
                - kiam
                - health
                - --cert=/bitnami/kiam/tls/cert.pem
                - --key=/bitnami/kiam/tls/key.pem
                - --ca=/bitnami/kiam/tls/ca.pem
                - --server-address=127.0.0.1:8443
                - --server-address-refresh=4s
                - --timeout=10s
                - --gateway-timeout-creation=1s
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - kiam
                - health
                - --cert=/bitnami/kiam/tls/cert.pem
                - --key=/bitnami/kiam/tls/key.pem
                - --ca=/bitnami/kiam/tls/ca.pem
                - --server-address=127.0.0.1:8443
                - --server-address-refresh=2s
                - --timeout=5s
                - --gateway-timeout-creation=1s
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - mountPath: /bitnami/kiam/tls
              name: tls
            - mountPath: /etc/ssl/certs
              name: ssl-certs
              readOnly: true
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: tls
          secret:
            secretName: my-release-kiam-server
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
